# earnings-call-analyser

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.model
k8s/: api-deployment.yaml  configmap.yaml  dashboard-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml.example
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  alignment.py  analysis.py  backtest.py  companies.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  alphavantage_client.py  earningscall_client.py  finnhub_client.py  fmp_client.py  sec_client.py  transcript_parser.py  transcript_provider.py
src/db/: __init__.py  models.py  session.py
src/model/: __init__.py  alignment_classifier.py  trainer.py
src/nlp/: __init__.py  embeddings.py  question_classifier.py
tests/: __init__.py  test_alignment_classifier.py  test_api.py  test_embeddings.py  test_question_classifier.py  test_transcript_parser.py
